<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, ParseStarterProjectActivity!</string>
    <string name="app_name">ScramD</string>
    <string name="action_settings">Settings</string>
    
    <string name="c_user">Create User</string>
    
    <string name="logout">Logout</string>
    
    <string name="add">ADD</string>
    <string name="remove">REMOVE</string>
    <string name="username">Username</string>
    
    <string name="send_challenge">Send Challenge</string>
    <string name="take_photo">Take Photo</string>
    <string name="cancel">Cancel</string>
    
    
    
    <string name="dialog_diff">Select Difficulty</string>
    <string name="play">Play</string>

    
    <string name="dialog_win">Select Difficulty</string>
    <string name="play_again">Play Again</string>
    <string name="main_menu">Main Menu</string>

    
    <string name="title">ScramD</string>
    
	<string name="solo">Solo</string>
    <string name="friends">Friends</string>
    <string name="settings">Settings</string>
    
    
    <string name="dialog_friends"> </string>
    <string name="current_games">Current Games</string>
    <string name="select_image">Select Image</string>
    <string name="camera">Camera</string>
    <string name="RSV">Reshape Surface View</string>
    <string name="shoot">SHOOT</string>
    
    <string name="display">display</string>
    
    
    <color name="white">#FFFFFF</color>

    <!-- 
    This is the start of Daniel's addons
     -->
    <string name="version_number">Version \- 1.3.3</string>
    <string name="daniel_name">De Leon\, Daniel</string>
    <string name="eduardo_name">Behar\, Eduardo</string>
    <string name="james_name">Silvera\, James</string>
    <string name="iosif_name">Vilcea\, Iosif</string>
    <string name="username_entry_field">Username</string>
    <string name="password_entry_field">Password</string>
    <string name="password_entry_field2">Re-Enter Password</string>
    <string name="newpass_entry_field">New Password</string>
    <string name="newpass_entry_field2">Re-Enter New Password</string>
    <string name="title_activity_main__menu">Main Menu</string>
    <string name="title_activity_signup">Signup</string>
    <string name="title_activity_solo__difficulty">Solo Difficulty</string>
    <string name="title_activity_solo__game">Solo Game</string>
    <string name="title_activity_friends__list">Friends List</string>
    <string name="title_activity_game">Game</string>
    <string name="login_bottom_text">Login</string>
    <string name="signup_bottom_text">Signup</string>
    <string name="logo_description">ScramD Logo</string>
    <string name="shutter_descrip">The shutter button for the camera</string>
    <string name="submit_text">Submit</string>
    <string name="cancel_text">Cancel</string>
    <string name="send_text">Send</string>
    <string name="last_name_entry_field">Last Name</string>
    <string name="first_name_entry_field">First Name</string>
    <string name="email_entry_field">Email</string>
    <string name="difficulty_hard_text">Hard</string>
    <string name="difficulty_normal_text">Normal</string>
    <string name="difficulty_easy_text">Easy</string>
    <string name="solo_text">Solo</string>
    <string name="friends_text">Friends</string>
    <string name="settings_text">Settings</string>
    <string name="logout_text">Logout</string>
    <string name="del_account">Delete Account</string>
    <string name="ppolicy">Privacy Policy</string>
    <string name="toservice">Terms of Service</string>
    <string name="about_text">About</string>
    <string name="chg_pass">Change Password</string>
    <string name="passrecv">Password Recovery</string>
    <string name="lost_password">\?</string>
    <string name="your_score">You: </string>
    <string name="friend_score">Friend:</string>
    <string name="deleteAcc">Delete Account</string>
    <string name="delete">Delete</string>
    <string name="ruSure">Are you sure? \nAll your information will be lost.</string>
    <string name="challenge_text">Challenge</string>
    
    <string name="gameResults">Game Results</string>
    <string name="ok">OK</string>
    
    <string name="diff_title">Select Difficulty</string>
    <string name="easy_diff">Easy</string>
    <string name="medium_diff">Medium</string>
    <string name="hard_diff">Hard</string>
    
    
    
    <color name="background_bottom">#002c6d</color>
    <color name="background_top">#005be4</color>
    <color name="logo_background">#00000000</color>
    <color name="text_background">#00000000</color>
    <color name="toast_background">#00000000</color>
    <color name="tab_background">#00000000</color>
    <color name="hint_grey">#c7c7c7</color>
    <color name="transparent">#00000000</color>
    <color name="black">#000000</color>
    <color name="dialog_text">#ffffff</color>
    <color name="dialog_text2">#000000</color>
    <color name="dialog_bkgd">#000000</color>
</resources>
