<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/aboutTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/transparent"
        android:text="@string/about_text" />

    <TextView
        android:id="@+id/version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aboutTitle"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/button_separation_big"
        android:background="@color/transparent"
        android:text="@string/version_number" />

    <TextView
        android:id="@+id/made"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/version"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/button_separation_small"
        android:background="@color/transparent"
        android:text="Made by"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/version"
        android:layout_below="@+id/made"
        android:layout_marginTop="@dimen/button_separation_small"
        android:background="@color/transparent"
        android:text="@string/eduardo_name" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="@dimen/button_separation_small"
        android:background="@color/transparent"
        android:text="@string/daniel_name" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="@dimen/button_separation_small"
        android:background="@color/transparent"
        android:text="@string/james_name" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="@dimen/button_separation_small"
        android:background="@color/transparent"
        android:text="@string/iosif_name" />

</RelativeLayout>
