<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin_with_image"
    android:orientation="vertical" >
    
    <ImageView
        android:id="@+id/logoimg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/applogo"
        android:background="@color/logo_background" />

    <Button
        android:id="@+id/passEdit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_above="@+id/deleteAcc"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/button_separation_small"
        android:background="@drawable/single_button"
        android:clickable="true"
        android:onClick="onClick"
        android:text="@string/chg_pass"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/deleteAcc"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_above="@+id/about"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/button_separation_small"
        android:background="@drawable/single_button"
        android:clickable="true"
        android:onClick="onClick"
        android:text="@string/del_account"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_above="@+id/pp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/button_separation_small"
        android:background="@drawable/single_button"
        android:clickable="true"
        android:onClick="onClick"
        android:text="@string/about_text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/pp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_above="@+id/tos"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/button_separation_small"
        android:background="@drawable/single_button"
        android:clickable="true"
        android:onClick="onClick"
        android:text="@string/ppolicy"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/tos"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_above="@+id/lo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/button_separation_small"
        android:background="@drawable/single_button"
        android:clickable="true"
        android:onClick="onClick"
        android:text="@string/toservice"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/lo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/button_separation_small"
        android:background="@drawable/single_button"
        android:clickable="true"
        android:onClick="onClick"
        android:text="@string/logout_text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>