<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
 	android:id="@+id/tabhost"
 	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/tab_background" >

 	<LinearLayout
		android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/tab_background" >
	


		<TabWidget
			android:id="@android:id/tabs"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" 
			android:background="@color/tab_background" />

		<FrameLayout
			android:id="@android:id/tabcontent"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:background="@drawable/background" >
			
		   <LinearLayout 
		        android:id="@+id/tab1"
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:orientation="vertical" >
		        
		        <ListView 
		            android:id="@+id/lv"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:divider="@color/transparent"
		            android:dividerHeight="3dp"
		            android:background="@color/tab_background" >
		            
		        </ListView>
		        
		    </LinearLayout>

		    <LinearLayout 
		        android:id="@+id/tab2"
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:orientation="vertical"
    			android:paddingBottom="@dimen/activity_vertical_margin"
    			android:paddingLeft="@dimen/activity_horizontal_margin"
    			android:paddingRight="@dimen/activity_horizontal_margin"
    			android:paddingTop="@dimen/activity_vertical_margin"
    			android:background="@drawable/background" >
		        
		        <EditText 
		            android:id="@+id/addEt"
		            android:layout_width="match_parent"
		            android:layout_height="@dimen/input_height"
		            android:hint="@string/username_entry_field"
		            android:inputType="text"
		            android:layout_marginTop="90dp"
		            android:background="@drawable/input_field" />
		            
		       	<Button 
		            android:id="@+id/addBtn"
		            android:layout_width="match_parent"
		            android:layout_height="@dimen/button_height"
		            android:text="@string/add"
		            android:onClick="addFriend"
		            android:layout_marginTop="@dimen/button_separation_small"
		            android:background="@drawable/single_button" />
		        
		       	
		       	<EditText 
		            android:id="@+id/removeEt"
		            android:layout_width="match_parent"
		            android:layout_height="@dimen/input_height"
		            android:layout_marginTop="50dp"
		            android:hint="@string/username_entry_field"
		            android:inputType="text"
		            android:background="@drawable/input_field" />
		            
		       	<Button 
		            android:id="@+id/removeBtn"
		            android:layout_width="match_parent"
		            android:layout_height="@dimen/button_height"
		            android:text="@string/remove"
		            android:onClick="removeFriend"
		            android:layout_marginTop="@dimen/button_separation_small"
		            android:background="@drawable/single_button" />
		        
		        
		    </LinearLayout>		    
		   			   
		</FrameLayout>
		
 	</LinearLayout>

</TabHost>
